src/app/common/components/forms/checkbox/checkbox.component.scss
m-formInput__checkbox {
  display: block;
}
.m-formInput__checkbox {
  display: block;
  position: relative;
  cursor: pointer;
  user-select: none;
  font-family: 'Roboto', Helvetica, sans-serif;
  @include m-theme() {
    color: themed($m-grey-300);
  }
  font-size: 13px;

  .m-formInputCheckbox__visibleWrapper {
    display: flex;
    align-items: center;
  }
  .m-formInputCheckbox__custom {
    display: inline-block;
    vertical-align: middle;
    height: 20px;
    width: 20px;
    border-radius: 2px;
    transition: all 0.3s ease;
    margin-right: $minds-margin;

    @include m-theme() {
      background-color: themed($m-white);
      border: 1px solid themed($m-grey-100);
    }

    &:after {
      content: '';
      position: absolute;
      display: none;
      -webkit-transform: rotate(45deg);
      -ms-transform: rotate(45deg);
      transform: rotate(45deg);

      left: 8px;
      top: 3px;
      width: 5px;
      height: 12px;

      @include m-theme() {
        border: 1px solid themed($m-white);
        border-top: none;
        border-left: none;
      }
    }
  }

  // The input itself is invisible
  input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;

    &:checked ~ .m-formInputCheckbox__visibleWrapper {
      .m-formInputCheckbox__custom {
        @include m-theme() {
          background-color: themed($m-blue);
          border-color: themed($m-blue);
        }

        &:after {
          display: block;
        }
      }
    }
  }
}

